<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/sign_in_dialog_background">


        <LinearLayout
            android:id="@+id/how_to_play_close_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/confirmation_text_view"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/close_icon" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/how_to_play_close_btn">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="254dp"
                    android:layout_height="254dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/sudoku_example_grid" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="casual"
                    android:gravity="center_horizontal"
                    android:text="@string/how_to_play_para_1"
                    android:textColor="@color/grid_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="casual"
                    android:gravity="center_horizontal"
                    android:text="@string/how_to_play_para_2"
                    android:textColor="@color/grid_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="match_parent"
                    android:layout_height="254dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/sudoku_example_grid_row" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="casual"
                    android:gravity="center_horizontal"
                    android:text="@string/how_to_play_para_3"
                    android:textColor="@color/grid_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="match_parent"
                    android:layout_height="254dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/sudoku_example_grid_col" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="casual"
                    android:gravity="center_horizontal"
                    android:text="@string/how_to_play_para_4"
                    android:textColor="@color/grid_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView24"
                    android:layout_width="match_parent"
                    android:layout_height="254dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/sudoku_example_grid_grp" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="casual"
                    android:gravity="center_horizontal"
                    android:text="@string/how_to_play_para_5"
                    android:textColor="@color/grid_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="casual"
                    android:gravity="center_horizontal"
                    android:text="@string/how_to_play_para_6"
                    android:textColor="@color/grid_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView25"
                    android:layout_width="match_parent"
                    android:layout_height="254dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/sudoku_example_grid_complete" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</RelativeLayout>